Refined meterial theme.

--- a/src/styles/theme.g.scss
+++ b/src/styles/theme.g.scss
@@ -1,5 +1,6 @@
 @import '~font-awesome/css/font-awesome.css';
 @import '~@/styles/variables.g';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 .ui-button {
   background-color: $primary-color;
